# fluidsender_freecad_addon

./: .gitignore  CLAUDE.md  InitGui.py  README.md  external-api.md  package.xml  pyproject.toml
fluidsender_addon/: client.py  commands.py  config.py  errors.py  freecad_prefs.py  postprocessing.py  sanitize.py  session_state.py  toolbar_injection.py  workbench.py
fluidsender_addon/gui/: post_process_dialog.py  preferences.py
tests/: fakes.py  test_client.py  test_config.py  test_sanitize.py  test_session_state.py
