[project]
name = "fluidsender-addon"
version = "0.1.0"
description = "FreeCAD CAM addon that posts selected operations to a FluidSender server"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
# FreeCAD/FreeCADGui/Path/PySide only exist inside FreeCAD's bundled interpreter
# and have no stubs available outside it. Modules that import them are excluded
# from strict checking here and can only be verified by running inside FreeCAD.
exclude = [
  "fluidsender_addon/gui/",
  "fluidsender_addon/commands.py",
  "fluidsender_addon/postprocessing.py",
  "fluidsender_addon/freecad_prefs.py",
  "fluidsender_addon/toolbar_injection.py",
  "fluidsender_addon/workbench.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
